feat: added cards

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
 
@@ -22,68 +23,115 @@
     </header>
 
     <div class="wrapper">
-      <span class="pill">finance product</span>
-      <h1>
-        Add a card for anyone. <br />
-        Earn interest from anywhere.
-      </h1>
+      <div class="text">
+        <span class="pill">finance product</span>
+        <h1>
+          Add a card for anyone. <br />
+          Earn interest from anywhere.
+        </h1>
 
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, vel earum autem dignissimos atque, cumque quae dolorum maxime eos obcaecati consequuntur architecto porro aliquam veritatis exercitationem. Quos voluptatibus dolorem rem!
-      </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, vel earum autem dignissimos atque, cumque quae dolorum maxime eos obcaecati consequuntur architecto porro aliquam veritatis exercitationem. Quos voluptatibus dolorem rem!
+        </p>
 
-      <a href="" class="btn-primary">Get Started - It's Free</a>
+        <a href="" class="btn-primary">Get Started - It's Free</a>
+      </div>
+
+      <div class="shapes">
+        <svg width="53" height="53" viewBox="0 0 53 53" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="4.08824" cy="4.0677" r="3.33543" fill="#0077ff" />
+          <circle cx="4.08824" cy="19.8884" r="3.33543" fill="#0077ff" />
+          <circle cx="4.08824" cy="33.2334" r="3.33543" fill="#0077ff" />
+          <circle cx="4.08824" cy="49.0543" r="3.33543" fill="#0077ff" />
+          <circle cx="19.0882" cy="4.0677" r="3.33543" fill="#0077ff" />
+          <circle cx="19.0882" cy="19.8884" r="3.33543" fill="#0077ff" />
+          <circle cx="19.0882" cy="33.2334" r="3.33543" fill="#0077ff" />
+          <circle cx="19.0882" cy="49.0543" r="3.33543" fill="#0077ff" />
+          <circle cx="34.0881" cy="4.0677" r="3.33543" fill="#0077ff" />
+          <circle cx="34.0881" cy="19.8884" r="3.33543" fill="#0077ff" />
+          <circle cx="34.0881" cy="33.2334" r="3.33543" fill="#0077ff" />
+          <circle cx="34.0881" cy="49.0543" r="3.33543" fill="#0077ff" />
+          <circle cx="49.088" cy="4.0677" r="3.33543" fill="#0077ff" />
+          <circle cx="49.088" cy="19.8884" r="3.33543" fill="#0077ff" />
+          <circle cx="49.088" cy="33.2334" r="3.33543" fill="#0077ff" />
+          <circle cx="49.088" cy="49.0543" r="3.33543" fill="#0077ff" />
+        </svg>
+
+      </div>
+
+      <blockquote cite="https://www.huxley.net/bnw/four.html">
+        <svg viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M15.5851 1.32118C12.5838 2.9373 10.7596 4.98631 10.7597 10.0902V14.9587C10.7597 16.0633 11.6551 16.9587 12.7597 16.9587H15.6282C16.7328 16.9587 17.6282 16.0633 17.6282 14.9587V12.0902C17.6282 10.9856 16.7328 10.0902 15.6282 10.0902H11.0831"
+            stroke="#0077ff" />
+          <path
+            d="M5.4465 1.32118C2.44513 2.9373 0.621002 4.98631 0.621033 10.0902V14.9587C0.621033 16.0633 1.51646 16.9587 2.62103 16.9587H5.48956C6.59413 16.9587 7.48956 16.0633 7.48956 14.9587V12.0902C7.48956 10.9856 6.59413 10.0902 5.48956 10.0902H0.944413"
+            stroke="#0077ff" />
+        </svg>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem quidem odit, ut laudantium saepe eum.
+        </p>
+        <footer>
+          <img src="https://randomuser.me/api/portraits/thumb/women/43.jpg" alt="Frances Chandler">
+          <div class="text">
+            <span>Frances Chandler</span>
+            <cite>Digital Designer</cite>
+          </div>
+        </footer>
+      </blockquote>
     </div>
 
-    <img src="" alt="" class="shapes">
-
-    <blockquote cite="https://www.huxley.net/bnw/four.html">
-      <img src="" alt="" class="quotes">
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem quidem odit, ut laudantium saepe eum.
-      </p>
-      <footer>
-        <img src="" alt="" class="profile">
-        Frances Chandler
-        <cite>Digital Designer</cite>
-      </footer>
-    </blockquote>
 
 
     <ol class="cards">
       <li>
-        <button class="green"> <img src="" alt="" class="add"> </button>
+        <button class="green">
+          <span class="icon add"></span>
+        </button>
         <span>Add New Card</span>
       </li>
 
       <li>
-        <button class="blue"> <img src="" alt="" class="menu"> </button>
-        <span>Mastercard</span>
-        <img src="" alt="" class="mastercard">
-        <span class="password">&bull;&bull;&bull;&bull;</span>
-        <span class="number">1211</span>
+        <button class="blue">
+          <span class="icon menu"></span>
+        </button>
+        <div>
+          <span>Mastercard</span>
+          <img src="images/mastercard.svg" alt="Mastercard">
+          <span class="password">&bull;&bull;&bull;&bull;</span>
+          <span class="number">1211</span>
+        </div>
       </li>
 
       <li>
-        <button class="blue"> <img src="" alt="" class="menu"> </button>
-        <span>Visa</span>
-        <img src="" alt="" class="mastercard">
-        <span class="password">&bull;&bull;&bull;&bull;</span>
-        <span class="number">1211</span>
+        <button class="blue">
+          <span class="icon menu"></span>
+        </button>
+        <div>
+          <span>Visa</span>
+          <img src="images/visa.svg" alt="Visa">
+          <span class="password">&bull;&bull;&bull;&bull;</span>
+          <span class="number">1211</span>
+        </div>
       </li>
 
       <li>
-        <button class="blue"> <img src="" alt="" class="menu"> </button>
-        <span>Mastercard</span>
-        <img src="" alt="" class="mastercard">
-        <span class="password">&bull;&bull;&bull;&bull;</span>
-        <span class="number">1211</span>
+        <button class="blue">
+          <span class="icon menu"></span>
+        </button>
+        <div>
+          <span>Mastercard</span>
+          <img src="images/mastercard.svg" alt="Mastercard">
+          <span class="password">&bull;&bull;&bull;&bull;</span>
+          <span class="number">1211</span>
+        </div>
       </li>
 
     </ol>
 
 
   </section>
+
   <section class="features">
 
     <div class="shapes"></div>
